# RustQuant

./: Cargo.toml  README.md
src/: binomial.rs  black_scholes.rs  fetch.rs  greeks.rs  main.rs
src/commands/: auto.rs  manual.rs  mod.rs
